--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@typescript-eslint/parser": "^5.27.1",
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-react": "^7.30.0",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
