--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
         "@typescript-eslint/eslint-plugin": "^5.27.1",
         "@typescript-eslint/parser": "^5.27.1",
         "@vitejs/plugin-react": "^1.3.0",
+        "autoprefixer": "^10.4.7",
         "eslint": "^8.17.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-react": "^7.30.0",
+        "postcss": "^8.4.14",
         "prettier": "^2.6.2",
+        "prettier-plugin-tailwindcss": "^0.1.11",
+        "tailwindcss": "^3.0.24",
         "typescript": "^4.6.3",
         "vite": "^2.9.9"
     },
