--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "prepare": "simple-git-hooks > /dev/null"
     },
     "dependencies": {
+        "@types/react-router-dom": "^5.3.3",
         "react": "^18.0.0",
-        "react-dom": "^18.0.0"
+        "react-dom": "^18.0.0",
+        "react-router-dom": "^6.3.0"
     },
     "devDependencies": {
         "@types/react": "^18.0.0",
