--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "postcss": "^8.4.14",
         "prettier": "^2.6.2",
         "prettier-plugin-tailwindcss": "^0.1.11",
+        "sass": "^1.52.3",
         "tailwindcss": "^3.0.24",
         "typescript": "^4.6.3",
         "vite": "^2.9.9"
