--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "@types/react-router-dom": "^5.3.3",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
-        "react-router-dom": "^6.3.0"
+        "react-router-dom": "^6.3.0",
+        "recoil": "^0.7.3"
     },
     "devDependencies": {
         "@types/react": "^18.0.0",
