--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "prepare": "simple-git-hooks > /dev/null"
     },
     "dependencies": {
+        "@headlessui/react": "^1.6.6",
         "@types/react-router-dom": "^5.3.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
